# 05_homework

./: CMakeLists.txt  main.cpp  statistics.h  statistics.hpp  statistics_max.cpp  statistics_max.h  statistics_mean.cpp  statistics_mean.h  statistics_min.cpp  statistics_min.h  statistics_pct.cpp  statistics_pct.h  statistics_std.cpp  statistics_std.h
